# gCSVedit

./: AUTHORS  HACKING  Makefile.am  NEWS  README  README.md  configure.ac  privacy-policy.md
build-aux/flatpak/: .gitignore  1-build-and-install.sh  1-build.sh  2-add-remote.sh  3-install-app.sh  3-teardown.sh  5-teardown.sh  com.github.swilmet.gcsvedit.yml
build-aux/win32/: README  README.md  build.sh  make-gcsvedit-installer  make-gcsvedit-installer.bat
build-aux/win32/installer/: gcsvedit.wxs
build-aux/win32/mingw-w64-gcsvedit/: .gitignore  PKGBUILD  README.md  build.sh  install.sh
build-aux/win32/msix/: AppxManifest.xml
data/: Makefile.am  be.uclouvain.gcsvedit.appdata.xml  be.uclouvain.gcsvedit.desktop  com.github.swilmet.gcsvedit.appdata.xml  com.github.swilmet.gcsvedit.desktop  org.ucl.gcsvedit.desktop
flatpak/: .gitignore  1-build.sh  3-install-app.sh  4-run-app.sh  README  add-remote.sh  be.uclouvain.gcsvedit.json  build.sh  com.github.swilmet.gcsvedit.json  install-app.sh  run-app.sh
po/: LINGUAS  Makevars  POTFILES.in  fr.po
samples/: test-comma.csv  test-header.csv
src/: Makefile  Makefile.am  gcsv-alignment.c  gcsv-alignment.h  gcsv-application.c  gcsv-application.h  gcsv-buffer.c  gcsv-buffer.h  gcsv-delimiter-chooser.c  gcsv-delimiter-chooser.h  gcsv-dsv-utils.c  gcsv-dsv-utils.h  gcsv-factory.c  gcsv-factory.h  gcsv-main.c  gcsv-properties-chooser.c  gcsv-properties-chooser.h  gcsv-tab.c  gcsv-tab.h  gcsv-text-region.c  gcsv-text-region.h  gcsv-utils.c  gcsv-utils.h  gcsv-window.c  gcsv-window.h  gedit-metadata-manager.c  update-textregion.sh
src/resources/: Makefile.am  gcsvedit.gresource.xml  menu.ui  menus.ui
tests/: Makefile.am  test-alignment.c  test-utils.c
tests/samples/: README  test-semicolon.csv  test-tab.tsv
testsuite/: Makefile.am  test-alignment.c  test-utils.c
win32/: Makefile.am  README  make-gcsvedit-installer  make-gcsvedit-installer.bat
win32/installer/: defines.wxi
win32/mingw-w64-gcsvedit/: PKGBUILD
xdg-app/: .gitignore  add-remote.sh  be.uclouvain.gcsvedit.json  build.sh  install-app.sh  run-app.sh
