SUBDIRS = data po src testsuite

@CODE_COVERAGE_RULES@

AM_DISTCHECK_CONFIGURE_FLAGS = --enable-appstream-util

EXTRA_DIST =		\
	HACKING		\
	README.md

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
	INSTALL

-include $(top_srcdir)/git.mk
