# Stuff to build the Windows installer:
EXTRA_DIST += \
	win32/make-gcsvedit-installer \
	win32/make-gcsvedit-installer.bat \
	win32/README \
	win32/installer/COPYING.rtf \
	win32/installer/defines.wxi \
	win32/installer/gcsvedit.wxs \
	win32/installer/WixUIBannerBmp.bmp \
	win32/installer/WixUIDialogBmp.bmp
